--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -36,4 +36,7 @@
     <string name="dlg_ok">"确定"</string>
     <!-- Manage applications, individual application screen, confirmation dialog button. Displays when user selects to "Clear data". -->
     <string name="dlg_cancel">"取消"</string>
+    <string name="peer_list">"对等设备列表: "</string>
+    <string name="rtsp_fail">"连接失败"</string>
+    <string name="rtsp_suggestion">"连接丢失，请重新尝试连接......"</string>
 </resources>
