--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -42,4 +42,7 @@
     <string name="peer_list">"对等设备列表: "</string>
     <string name="rtsp_fail">"连接失败"</string>
     <string name="rtsp_suggestion">"连接丢失，请重新尝试连接......"</string>
+    <string name="setting_definition">"清晰度"</string>
+    <string name="setting_definition_sd">"标清"</string>
+    <string name="setting_definition_hd">"高清"</string>
 </resources>
