--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="peer_list">Peer List : </string>
     <string name="rtsp_fail">Miracast Connection Failure</string>
     <string name="rtsp_suggestion">Please retry miracast connection from source device ...</string>
+    <string name="setting_definition">Definition Settings</string>
+    <string name="setting_definition_sd">SD</string>
+    <string name="setting_definition_hd">HD</string>
 </resources>
