pd #96194: change "Setting" to "Settings"
Change-Id: I355e6fb316217032f62c1a250c25de4e303499e3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_name">MediaBox launcher</string>
     <string name="str_video">Online Video </string>
     <string name="str_recommend">My recommend</string>
-    <string name="str_setting">Setting</string>
+    <string name="str_setting">Settings</string>
     <string name="str_app">My Apps</string>
     <string name="str_music">Music</string>
     <string name="str_local">Local</string>
