change "My recommend" to "Recommend"
Change-Id: Ic911b7679cf19d82d258d7a8c3e679cc54468458

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello">Hello World</string>
     <string name="app_name">MediaBox launcher</string>
     <string name="str_video">Online Video </string>
-    <string name="str_recommend">My recommend</string>
+    <string name="str_recommend">Recommend</string>
     <string name="str_setting">Settings</string>
     <string name="str_app">My Apps</string>
     <string name="str_music">Music</string>
