--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello">Hello World</string>
     <string name="app_name">新媒體盒啟動器</string>
     <string name="str_video">在線視頻</string>
-    <string name="str_recommend">我的推薦</string>
+    <string name="str_recommend">推薦</string>
     <string name="str_setting">設置</string>
     <string name="str_app">我的應用</string>
     <string name="str_music">音樂</string>
