--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello">Hello World</string>
     <string name="app_name">MediaBox launcher</string>
     <string name="str_video">Online Video </string>
+    <string name="str_tvapp">TV APP </string>
     <string name="str_recommend">Recommend</string>
     <string name="str_setting">Settings</string>
     <string name="str_app">My Apps</string>
