--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="device_name"  product="tablet">tablet</string>
     <string name="device_name"  product="mbx">mbox</string>
     <string name="device_name"  product="default">mbox, tablet or tv</string>
-    <string name="device_info">Device:</string>
+    <string name="device_info">Local Device Name:</string>
     <string name="go">GO</string>
     <string name="connected_info">"Connected"</string>
     <string name="discover_init">Discovery Initiated</string>
@@ -39,10 +39,18 @@
     <string name="dlg_ok">OK</string>
     <!-- Manage applications, individual application screen, confirmation dialog button. Displays when user selects to "Clear data". -->
     <string name="dlg_cancel">Cancel</string>
-    <string name="peer_list">Peer List : </string>
+    <string name="peer_list">Peer Devices List : </string>
     <string name="rtsp_fail">Miracast Connection Failure</string>
     <string name="rtsp_suggestion">Please retry miracast connection from source device ...</string>
     <string name="setting_definition">Definition Settings</string>
     <string name="setting_definition_sd">SD</string>
     <string name="setting_definition_hd">HD</string>
+    <string name="disconnect_sink">Tear Down</string>
+    <string name="pause_sink">Pause</string>
+    <string name="play_sink">Play</string>
+    <string name="dlg_title">Please select action</string>
+    <string name="str_funlist">Command List:</string>
+    <string name="str_listen_channel">Listen Channel:</string>
+    <string name="str_oper_channel">Operation Channel:</string>
+    <string name="str_devicelist">Select Peer Device to Connect:</string>
 </resources>
