pd #124359: add tv muti session support
Change-Id: Ib25386fcd73903c4e3b98ac504e2f01ebcce8d3b

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -14,4 +14,5 @@
     <string name="str_add">添加</string>
     <string name="str_exit">退出</string>
     <string name="str_no_signal">无信号</string>
+    <string name="str_scrambeled">频道加密</string>
 </resources>
