--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -13,4 +13,5 @@
     <string name="str_nospace">快捷欄沒有空間了！</string>
     <string name="str_add">添加</string>
     <string name="str_no_signal">無信號</string>
+    <string name="str_scrambeled">頻道加密</string>
 </resources>
