--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="img_desc">image</string>
     <string name="str_exit">Exit</string>
     <string name="str_no_signal">No signal</string>
+    <string name="str_scrambeled">Scrambled</string>
 </resources>
