Launcher: merge from Android O [1/1]
PD#171673

Change-Id: I8988122b0db68e29156a0ff7934ed547029cea2b
Signed-off-by: Lei Qian <lei.qian@amlogic.com>

--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -14,4 +14,5 @@
     <string name="str_add">添加</string>
     <string name="str_no_signal">無信號</string>
     <string name="str_scrambeled">頻道加密</string>
+    <string name="str_blocked">頻道加鎖</string>
 </resources>
