--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="hello">Hello World</string>
     <string name="app_name">MediaBox launcher</string>
     <string name="str_video">Online Video </string>
-    <string name="str_tvapp">TV App </string>
+    <string name="str_tvapp">LiveTv </string>
     <string name="str_recommend">Recommend</string>
     <string name="str_setting">Settings</string>
     <string name="str_app">My Apps</string>
@@ -25,5 +25,8 @@
     <string name="img_desc">image</string>
     <string name="str_exit">Exit</string>
     <string name="str_no_signal">No signal</string>
+    <string name="str_no_channel">No channel</string>
     <string name="str_scrambeled">Scrambled</string>
+    <string name="str_blocked">Program is blocked</string>
+    <string name="toast_livetv_warn">LiveTv is releasing, please wait</string>
 </resources>
