Amlogic: sync the code from mainline. [1/1]
PD#SWPL-17246

Problem:
sync the code from mainline.

Solution:
sync the code from mainline.

a4c1c2a MboxLauncher2: add prop to record playing status [2/2]
b673438 MediaBoxLauncher: fix TvView shows no channel issue [1/1]
5bf85fd Launcher: don't re-tune if TV is playing [1/1]
b49230a MboxLauncher2: fix judge error [1/1]
16f2f54 MboxLauncher2: judge status before tune after input added [1/1]
d5ac254 Launcher: reset home focus if current focus is null [1/1]
97f5094 MboxLauncher2: add radio tip for luncher tvview [1/1]
7e76261 Launcher: fix PassthroughInput source can play issue [1/1]

Verify:
verify by newton.

Change-Id: I896b205b0b39b4be242d6ed0cda180c38a85d609
Signed-off-by: Luan Yuan <luan.yuan@amlogic.com>

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -23,6 +23,7 @@
     <string name="str_add">添加</string>
     <string name="str_exit">退出</string>
     <string name="str_no_signal">无信号</string>
+    <string name="str_audio_only">广播</string>
     <string name="str_no_channel">无频道</string>
     <string name="str_scrambeled">频道加密</string>
     <string name="str_blocked">频道加锁</string>
