--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -15,4 +15,5 @@
     <string name="str_no_signal">無信號</string>
     <string name="str_scrambeled">頻道加密</string>
     <string name="str_blocked">頻道加鎖</string>
+    <string name="str_audio_only">廣播</string>
 </resources>
